# numerical-analysis-note

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .latexindent.yaml  .latexmkrc  .pre-commit-config.yaml  LICENSE.txt  NOTICE.md  Pipfile  README.md  about.tex  articles.bib  check_tex_files.py  cspell.json  kdesign.sty  kmath.sty  main.tex  mypy.ini  pyproject.toml  run-latexindent.py  settings.tex
.devcontainer/: Dockerfile  devcontainer.json  setup.bash
appendix/: double-pendulum.tex  lagrandian-and-hamiltonian.tex
dev/: change-docker-image.md  conventions.md  directory-structure.md  icon.md  index.md  latex-workshop-shortcuts.md
differentiation/: auto-diff-backward.puml  auto-diff.tex  auto_diff.tex  main.tex
docs/: start-auto-build.sh
docs/source/: about.rst  bibliography.rst  conf.py  index.rst
docs/source/web-contents/: index.rst
icon-logo/design/: note.md
icon-logo/design/parts/: Sigma.tex  sum.tex
icon/design/: note.md
integration/: adaptive-integration.tex  main.tex  multi-dim.tex  one-dim.tex
interp/: kernel.tex  main.tex
intro/: main.tex  notation.tex
matrix-computation/: iterative-solvers.tex  main.tex
matrix-computation/experiments/laplacian-2d-grid/: plot.py
matrix_computation/: main.tex
more-precision/: main.tex  multi-double.tex  reducing-truncation-errors.tex
num_anal_plots/: __init__.py  configure_plot_defaults.py  generate_plot_widget.py  make_pdf_plot.py  show_plot_in_jupyter.py
num_anal_plots/plots/: ode_common.py  plots.py
num_anal_plots/plots/bessel_functions/: bessel_functions.py
num_anal_plots/plots/gamma_function/: gamma_function.py
num_anal_plots/plots/integ_finite/: README.md  exp.data  integ_finite_de.py  integ_finite_gauss_legendre.py  integ_finite_gauss_legendre_kronrod.py  inv_sqrt_1mx2.data  sqrt_1mx2.data
num_anal_plots/plots/laplacian_2d_grid/: README.md  bench.data  laplacian_2d_grid.py
num_anal_plots/plots/legendre_function/: legendre_function.py
num_anal_plots/plots/ode_diffusion2d/: diffusion2d_dirichlet.data  ode_diffusion2d.py
num_anal_plots/plots/ode_implicit_kaps_problem/: README.md  (+6 more)
numerical-analysis-note/: .latexmkrc  articles.bib  build.sh  kdesign.sty  kmacro.sty  kmath.sty  main.tex  settings.tex
numerical-analysis-note/appendix/: double-pendulum.tex  main.tex
numerical-analysis-note/differentiation/: main.tex
numerical-analysis-note/integration/: adaptive-integration.tex  main.tex  multi-dim.tex  one-dim.tex
numerical-analysis-note/interp/: kernel.tex  main.tex
numerical-analysis-note/intro/: about.tex  notation.tex
numerical-analysis-note/matrix-computation/: generalized-inverse.tex  iterative-solvers.tex  main.tex  matrix-decompositions.tex
numerical-analysis-note/more-precision/: reducing-truncation-errors.tex
numerical-analysis-note/ode/: average-vector-field.tex  experiments.tex  intro.tex  main.tex  symplectic.tex
numerical-analysis-note/optimization/: augmented-lagrange-function.tex  descent-unconstrained-optimization.tex  downhill-simplex.tex  experiments.tex  global-optimization.tex  main.tex
numerical-analysis-note/pde/: advection.tex  convection.tex  experiments.tex  fem.tex  intro.tex  main.tex  rbf-fd.tex
numerical-analysis-note/regularization/: gen-tikhonov.tex  main.tex  sparse.tex  tikhonov.tex
numerical-analysis-note/special-functions/: bessel.tex  gamma.tex  legendre.tex  main.tex
ode/: average-vector-field.tex  main.tex  runge-kutta.tex  symplectic.tex
ode/runge-kutta/: formulas.tex  theory.tex
optimization/: descent-methods.tex  descent-unconstrained-optimization.tex  downhill-simplex.tex  global-optimization.tex  main.tex  one-dim-section-search.tex  unconstrained.tex
plots/: .gitignore
regularization/: gcv.tex  gen-tikhonov.tex  kernel.tex  l-curve.tex  main.tex  tikhonov.tex
root-finding/: main.tex  newton-raphson.tex
scripts/: check-filename.py  convert-icons.sh  fix-ten-maru.py  generate-images.sh  run-latexindent.py
special-functions/: legendre.tex  main.tex
(+84 files in other folders)
