[tool.poetry]
name = "numerical-analysis-note"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "num_anal_plots" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
click = "^8.3.1"
plotly = "^6.5.2"
pandas = "^2.3.3"
kaleido = "^1.2.0"
msgpack = "^1.1.2"
scipy = "^1.17.0"
# Some tools implicitly depends on setuptools.
setuptools = "^80.9.0"

[tool.poetry.group.web.dependencies]
sphinx = "^9.1.0"
sphinxext-opengraph = "^0.13.0"
sphinxcontrib-bibtex = "^2.6.5"
sphinx-orange-book-theme = "^0.18.0"
myst-nb = "^1.3.0"
jupyterlab = "^4.5.2"
ipywidgets = "^8.1.8"
ipython = "^9.9.0"
ipykernel = "^7.1.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pre-commit = "^4.5.1"
doc8 = "^2.0.0"
sphinx-autobuild = "^2025.8.25"
isort = "^7.0.0"
pylint = "^4.0.4"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pandas-stubs = "^2.3.3.260113"

[tool.poetry.scripts]
make_pdf_plot = "num_anal_plots.make_pdf_plot:make_pdf_plot"

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["E1120", "C0301", "R0912", "R0801", "R1735"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
