[project]
name = "numerical-analysis-note"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13,<3.14"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "num_anal_plots" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
click = "^8.3.1"
plotly = "^6.6.0"
pandas = "^3.0.1"
kaleido = "^1.2.0"
msgpack = "^1.1.2"
scipy = "^1.17.1"
ms37-designs = { git = "https://gitlab.com/MusicScience37Projects/utility-libraries/ms37-designs.git", rev = "f1f39517a2de68e48dc5e96caa7012c24cec0f8c" }
setuptools = "^82.0.1"

[tool.poetry.group.web.dependencies]
sphinx = "^9.1.0"
sphinxext-opengraph = "^0.13.0"
sphinxcontrib-bibtex = "^2.6.5"
sphinx-orange-book-theme = "^0.19.0"
myst-nb = "^1.4.0"
jupyterlab = "^4.5.6"
ipywidgets = "^8.1.8"
ipython = "^9.12.0"
ipykernel = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pre-commit = "^4.5.1"
doc8 = "^2.0.0"
sphinx-autobuild = "^2025.8.25"
isort = "^8.0.1"
pylint = "^4.0.5"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pandas-stubs = "^3.0.0.260204"
playwright = "^1.58.0"

[project.scripts]
make_pdf_plot = "num_anal_plots.make_pdf_plot:make_pdf_plot"

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["E1120", "C0301", "R0912", "R0801", "R1735"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
