[project]
name = "numerical-analysis-note"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13,<3.14"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "num_anal_plots" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
click = "^8.4.2"
plotly = "^6.8.0"
pandas = "^3.0.3"
kaleido = "^1.3.0"
msgpack = "^1.2.1"
scipy = "^1.18.0"
ms37-designs = { git = "https://gitlab.com/MusicScience37Projects/utility-libraries/ms37-designs.git", rev = "5166be0cf70aa6270e7d9c7f7c8baacdf2551a67" }
setuptools = "^82.0.1"

[tool.poetry.group.web.dependencies]
sphinx = "^9.1.0"
sphinxext-opengraph = "^0.13.0"
sphinxcontrib-bibtex = "^2.7.0"
sphinx-orange-book-theme = "^0.21.0"
myst-nb = "^1.4.0"
jupyterlab = "^4.6.1"
ipywidgets = "^8.1.8"
ipython = "^9.15.0"
ipykernel = "^7.3.0"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
pre-commit = "^4.6.0"
doc8 = "^2.0.0"
sphinx-autobuild = "^2025.8.25"
isort = "^8.0.1"
pylint = "^4.0.6"
flake8 = "^7.3.0"
mypy = "^2.1.0"
pandas-stubs = "^3.0.3.260530"
playwright = "^1.61.0"

[project.scripts]
make_pdf_plot = "num_anal_plots.make_pdf_plot:make_pdf_plot"

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["E1120", "C0301", "R0912", "R0801", "R1735"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
